testsuite/tests/properties/invalid_dflt_arg_val/too_many_args_3/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(a: Bool, b: Bool=true): Bool = a and b
    @exported fun calling(): Bool = node.p(true, false, c=false)
}
